--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,7 @@ image:
 tasks:
   - before: 'rasa train'
     command: 'RASA_X_PASSWORD=password rasa x --no-prompt & disown'
+  - command: 'rasa run actions --debug & disown'
 
 ports:
   - port: 5002
