--- a/domain.yml
+++ b/domain.yml
@@ -5,6 +5,8 @@ session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
 intents:
+- ask_skills:
+    use_entities: true
 - greet:
     use_entities: true
 - goodbye:
