Fix the yaml format

--- a/.github/workflows/cleanup-branch.yml
+++ b/.github/workflows/cleanup-branch.yml
@@ -10,8 +10,8 @@
 name: financial-demo cleanup-branch
 
 on:
-  workflow_dispatch
-  delete
+  workflow_dispatch:
+  delete:
 
 env:
   # Keep these values in sync with the values in the Makefile
