Upgrade to rasa 2.6.3 & rasa X 0.40.1 & helm chart 1.16.0

--- a/deploy/values.yml
+++ b/deploy/values.yml
@@ -1,3 +1,5 @@
+# debugMode enables / disables the debug mode for Rasa and Rasa X
+debugMode: "set_as_environment_variable-RASAX_DEBUG_MODE"
 # nginx ingress controller
 nginx:
     service:
