--- a/.github/workflows/cleanup-nightly.yml
+++ b/.github/workflows/cleanup-nightly.yml
@@ -54,5 +54,7 @@ jobs:
       - name: Cleanup EKS
         run: |
           echo "Delete all test clusters"
+          make install-kubectl
+          make install-helm
           make install-eksctl
           make aws-eks-cluster-delete-all-test-clusters
